:books: junção de todas as atividades

--- a/aula-1/atividades/a-01/index.html
+++ b/aula-1/atividades/a-01/index.html
@@ -13,6 +13,11 @@
     <button id="enviar" onclick=checarNumero()>CHECAR</button>
     <br><br>
     <h1 id="result"></h1>
+    <div>
+        <a href="../index.html">
+            <button>Voltar</button>
+        </a>
+    </div>
 
     <script src="funcoes.js"></script>
 </body>
