--- a/aula-1/atividades/a-02/index.html
+++ b/aula-1/atividades/a-02/index.html
@@ -34,6 +34,11 @@
         <button onclick="concordou()">Sim</button>
         <button onclick="encerrar()">Não</button>
     </div>
+    <div>
+        <a href="../index.html">
+            <button>Voltar</button>
+        </a>
+    </div>
     
     
 </body>
