--- a/aula-1/atividades/a-03/index.html
+++ b/aula-1/atividades/a-03/index.html
@@ -19,5 +19,10 @@
     <div id="resultado-div" style="display: none;">
         <p id="resultado"></p>
     </div>
+    <div>
+        <a href="../index.html">
+            <button>Voltar</button>
+        </a>
+    </div>
 </body>
 </html>
