--- a/aula-2/atividade-2/ativ2.html
+++ b/aula-2/atividade-2/ativ2.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atividade 1</title>
+    <title>Atividade 2</title>
     <script src="funcoes.js"></script>
 </head>
-<body>
-    <div class="bimestre">
+<body style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
+    <div class="bimestre" >
         <label for="nota">Primeiro Bimestre: </label>
         <input id="bimestre1" type="number" placeholder="Apenas números"><br><br>
     </div>
@@ -26,6 +26,7 @@
     </div>
     <div style="display: none" id="resultado-div">
         <h1 id="resultado"></h1>
+        <p id="situacao"></p>
         <button onclick="reiniciar()">Novo</button>
         <br><br>
     </div>
