--- a/aula-2/index.html
+++ b/aula-2/index.html
@@ -6,7 +6,7 @@
     <title>Atividade</title>
     <script src="funcoes.js"></script>
 </head>
-<body>
+<body style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
     <h1>Selecione uma das atividades para visualizar</h1>
     <menu style="display:inline-flex;">
         <ul>
