:books: atividade finalizada

--- a/aula-2/atividade-1/ativ1.html
+++ b/aula-2/atividade-1/ativ1.html
@@ -20,9 +20,10 @@
         <button data-moeda="libra">Libra</button>
         <button data-moeda="franco">Franco</button>
     </div>
-    <div id="resultado">
-        
+    <div id="resultado" style="display: none; margin-top: 10px;">
+        <h1 id="result"></h1>
     </div>
+    <a href="../index.html"><button style="margin-top: 40px;">Inicio</button></a>
     
     <script src="funcoes.js"></script>
 </body>
