--- a/aula-3/app/index.html
+++ b/aula-3/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,11 +11,31 @@
         <h1>Where's hear?</h1>
         <p>Jogo de adivinhação.</p>
         <h2>O jogador a cada rodada poderá testar suas habilidades de adivinhação com no máximo 5 possibilidades de erro.</h2>
+        <p>Teste números maiores que ZERO!</p>
+        <button id="iniciar" onclick="start()"> Iniciar</button>
+       
     </div>
-    <button onclick="mostrarDica()">DICA</button>
-    <h1 id="texto-dica"></h1>
 
-    <script src="../src/renderer.js"></script>
+
+    <container id="game" style="display: none;">
+
+        <div>
+            <button onclick="mostrarDica()">DICA</button>
+            <h1 id="texto-dica"></h1>
+        </div>
+        <div id="try">
+            <label id="tentativas">Você possui 5 tentativas: </label><input type="text" id="lance">
+            <button id="botao-try" onclick="tentar()">Enviar</button>
+        </div>
+
+        <div id="resultado-div">
+            <h1 id="numero-sorteado"></h1>
+            <p id="resultado-lance"></p>
+        </div>
+    </container>
+
+
     
+    <script src="renderer.js"></script>
 </body>
 </html>
