--- a/tela-login-cadastro/app/inicial/index_inicial.html
+++ b/tela-login-cadastro/app/inicial/index_inicial.html
@@ -11,9 +11,14 @@
         <h3>Selecione uma das opções abaixo para prosseguir</h3>
     </div>
     <div>
-        <ol>Cadastro</ol>
-        <ol>Login</ol>
+        <ol>
+            <button onclick="ircadastro()">Cadastro</button>
+        </ol>
+        <ol>
+            <button>Login</button>
+        </ol>
     </div>
     
+    <script src="renderer.js"></script>
 </body>
 </html>
