--- a/tela-login-cadastro/app/inicial/index_inicial.html
+++ b/tela-login-cadastro/app/inicial/index_inicial.html
@@ -10,12 +10,12 @@
         <h1>Bem vindo!</h1>
         <h3>Selecione uma das opções abaixo para prosseguir</h3>
     </div>
-    <div>
+    <div id="botoes">
         <ol>
-            <button onclick="ircadastro()">Cadastro</button>
+            <button id="botao-cadastro" onclick="mudarpagina()">Cadastro</button>
         </ol>
         <ol>
-            <button>Login</button>
+            <button id="botao-login" onclick="mudarpagina()">Login</button>
         </ol>
     </div>
     
