--- a/tela-login-cadastro/app/cadastro/index_cadastro.html
+++ b/tela-login-cadastro/app/cadastro/index_cadastro.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Cadastro de novo usuário</h1>
-    <form action="#">
+    <div>
         <!-- nome do cadastro -->
         <ol>
             <label for="nome-cadastro">Nome: </label>
@@ -41,9 +41,8 @@
         </ol><br>
 
         <!-- botao para enviar os dados do formulario -->
-        <button onclick="enviarDados()">Finalizar</button>
-
-    </form>
+        <button type="button" onclick="enviarDados()">Finalizar</button>
+    </div>
 
 
     <script src="renderer.js"></script>
