--- a/tela-login-cadastro/app/cadastro/index_cadastro.html
+++ b/tela-login-cadastro/app/cadastro/index_cadastro.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Cadastro de novo usuário</h1>
-    <div>
+    <div id="caixas-formulario">
         <!-- nome do cadastro -->
         <ol>
             <label for="nome-cadastro">Nome: </label>
